objects/Job_Role__c.object
<CustomObject>
    <description>Records the roles for each job - ENS, Presenter, Spot and Sell</description>
    <fields>
        <fullName>AccessLevel__c</fullName>
        <description>For Partner Community Sharing Report (Job Access Level)</description>
        <formula>&apos;Read&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For Partner Community Sharing Report (Job Access Level)</inlineHelpText>
        <label>AccessLevel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountAccessLevel__c</fullName>
        <formula>&apos;Edit&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountAccessLevel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <description>For Partner Community Sharing Report (Account ID)</description>
        <formula>Job__r.Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For Partner Community Sharing Report (Account ID)</inlineHelpText>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Job__r.Account__r.Name</formula>
        <label>Job Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseAccessLevel__c</fullName>
        <description>For Partner Community Sharing Report</description>
        <formula>&apos;None&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For Partner Community Sharing Report</inlineHelpText>
        <label>CaseAccessLevel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Account_Name__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Job Roles</relationshipLabel>
        <relationshipName>R00N20000001UZYzEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_is_ENS_Staff__c</fullName>
        <formula>IF (Contact__r.Contact_Type__c = &quot;ENS Staff&quot;
    ,&quot;TRUE&quot;
    ,&quot;FALSE&quot;
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact is ENS Staff</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Account_Id__c</fullName>
        <description>For Partner Sharing Purpose</description>
        <formula>CASESAFEID(Job__r.Account__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For Partner Sharing Purpose</inlineHelpText>
        <label>Job Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Days__c</fullName>
        <formula>Job__r.Job_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated Field</inlineHelpText>
        <label>Job Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_FX_Materials_Total__c</fullName>
        <formula>Job__r.FX_Materials_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job FX Materials Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_FX_Prof_Serv_Total__c</fullName>
        <formula>Job__r.FX_Prof_Serv_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job FX Prof Serv Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Item_Days__c</fullName>
        <formula>Job__r.Total_Job_Item_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Item Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <formula>Job__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <formula>CASE(Role__c , 
&quot;Spot&quot;, &quot;Spot&quot;,
&quot;Sell&quot;, &quot;Sell&quot;,
&quot;ENS&quot;, &quot;ENS&quot;,
&quot;Presenter&quot;, &quot;Presenter&quot;,
&quot;ERROR&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <formula>case(Job__r.Status__c, 
&quot;Proposed&quot;, &quot;Proposed&quot;, 
&quot;Proposal Declined&quot;, &quot;Proposal Declined&quot;, 
&quot;Completed&quot;,&quot;Completed&quot;, 
&quot;Cancelled&quot;,&quot;Cancelled&quot;, 
&quot;Postponed&quot;,&quot;Postponed&quot;, 
&quot;Confirmed&quot;,&quot;Confirmed&quot;, 
&quot;Closed&quot;, &quot;Closed&quot;,
&quot;tentative&quot;, &quot;Tentative&quot;,
&quot;ERROR&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Total_ENS_AUD__c</fullName>
        <formula>Job__r.Total_ENS_AUD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Total ENS AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Training_Type__c</fullName>
        <formula>case(Job__r.Training_Type__c, 
&quot;Advanced&quot;, &quot;Advanced&quot;, 
&quot;CDP&quot;, &quot;CDP&quot;, 
&quot;ENS NWM&quot;,&quot;ENS NWM&quot;, 
&quot;Event&quot;,&quot;Event&quot;, 
&quot;Incompany&quot;,&quot;Incompany&quot;, 
&quot;Incompany - by inhouse trainers&quot;,&quot;Incompany - by inhouse trainers&quot;, 
&quot;Public&quot;, &quot;Public&quot;, 
&quot;Sales Negotiator&quot;, &quot;Sales Negotiator&quot;, 
&quot;WLD&quot;, &quot;WLD&quot;, 
&quot;ERROR&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Training Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <formula>Job__r.Job_Class__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Job Roles</relationshipLabel>
        <relationshipName>JobRoles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_billing_currency__c</fullName>
        <formula>Job__r.Billing_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job billing currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensee_Region__c</fullName>
        <formula>CASE ( Contact__r.Licensee_Region__c 
, &quot;Australia / NZ&quot;, &quot;Australia / NZ&quot; 
, &quot;Asia&quot;,&quot;Asia&quot; 
, &quot;Europe&quot;,&quot;Europe&quot; 
, &quot;North America&quot;,&quot;North America&quot; 
, &quot;South America&quot;,&quot;South America&quot; 
, &quot;Unknown&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensee Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensee_Reporting__c</fullName>
        <formula>CASE( Contact__r.Licensee_Reporting__c 
                , &quot;YES&quot;,&quot;YES&quot;
                ,&quot;NO&quot;
             )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensee_Reporting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Role__c</fullName>
        <formula>IF (
     OR ( Job_Role__c = &quot;Spot&quot;, Job_Role__c = &quot;Sell&quot;)
      , &quot;YES&quot;
      , &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Materials_Share_AUD_Total__c</fullName>
        <formula>IF (Job__r.Billing_X_Rate__c =0,0,  Materials_Share_FX_Total__c   /  Job__r.Billing_X_Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Materials Share AUD Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Materials_Share_FX_Total__c</fullName>
        <formula>Job_FX_Materials_Total__c * Materials_Share__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Materials Share FX Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Materials_Share__c</fullName>
        <inlineHelpText>Enter 80% for ENS role
Enter appropriate % for Sell role (eg 20% if 1 seller, 10% each if 2 sellers, etc)</inlineHelpText>
        <label>Materials Share %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAM__c</fullName>
        <formula>Job__r.NAM_Name__r.FirstName  &amp; &quot; &quot;  &amp; Job__r.NAM_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NAM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Job_ID__c</fullName>
        <formula>Job__r.Old_Job_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Job ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Job_ID_on_Job_Role__c</fullName>
        <label>Old Job ID (on Job Role)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Job_Person_Role__c</fullName>
        <description>Temporary field to use as a unique key for bulk importing (GE 10/10/08).</description>
        <label>Old Job Person Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Person_ID__c</fullName>
        <formula>Contact__r.Old_Person_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Person ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Person_ID_on_Job_Role__c</fullName>
        <inlineHelpText>GE 1/2/09: we write the old person ID from the migrated Job Roles here, for reconciliation for those that don&apos;t match a contact.</inlineHelpText>
        <label>Old Person ID on Job Role</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Person_Name__c</fullName>
        <label>Old Person Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Person_Role_ID__c</fullName>
        <label>Old Person Role ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityAccessLevel__c</fullName>
        <description>For Partner Community Sharing Report (Opportunity Access Level)</description>
        <formula>&apos;None&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For Partner Community Sharing Report (Opportunity Access Level)</inlineHelpText>
        <label>OpportunityAccessLevel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <formula>Job__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_Id__c</fullName>
        <formula>Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenter_1_Name__c</fullName>
        <formula>CASE(Presenter_No__c, &quot;1&quot;,   Contact__r.Full_Name__c  , &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presenter 1 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenter_Fee_FX__c</fullName>
        <description>Updated via Apex. GE 22/9/08.</description>
        <label>Presenter Fee FX</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presenter_Fee__c</fullName>
        <description>Updated via Apex. GE 22/9/08.</description>
        <label>Presenter Fee</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presenter_No__c</fullName>
        <label>Presenter No.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prof_Serv_Share_AUD__c</fullName>
        <formula>IF (Job__r.Billing_X_Rate__c =0,0, Prof_Serv_Share_FX_Total__c  /  Job__r.Billing_X_Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prof Serv Share AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prof_Serv_Share_FX_Total__c</fullName>
        <formula>if( $RecordType.Name = &quot;Presenter&quot;,
    Presenter_Fee__c ,   
    Job_FX_Prof_Serv_Total__c * Prof_Serv_Share__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prof Serv Share FX Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prof_Serv_Share__c</fullName>
        <label>Prof Serv Share %</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Recon_PS_Fee_FX__c</fullName>
        <label>Recon PS Fee FX</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role_Contact_Name__c</fullName>
        <formula>Contact__r.FirstName &amp; &quot; &quot; &amp;  Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Contact_Type__c</fullName>
        <formula>CASE(Contact__r.RecordTypeId 
, &quot;012200000000hmj&quot;, &quot;ENS Staff&quot; 
, &quot;012200000000gto&quot;, &quot;Licencee&quot; 
, &quot;012200000000gtt&quot;,&quot;Marketer&quot; 
, &quot;012200000000hmZ&quot;,&quot;InHouse Trainer&quot; 
, &quot;012200000005KyV&quot;,&quot;Licencee&quot; 
, &quot;012200000000rcp&quot;,&quot;Licencee&quot; 
, &quot;01220000000Q6fc&quot;, &quot;Public Program&quot;
, &quot;012w0000000JZP5&quot;, &quot;Business Development Licencee&quot;
,&quot;012w0000000V9WS&quot;, &quot;Customer&quot;
, &quot;012w0000000V9WT&quot;, &quot;ENSi Employee&quot;
, &quot;012w0000000V9WU&quot;, &quot;In-House Trainer&quot;
, &quot;012w0000000V9WV&quot;, &quot;Network Member&quot;
,&quot;OTHER&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role_Contact_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ENS</fullName>
                </value>
                <value>
                    <fullName>Spot</fullName>
                </value>
                <value>
                    <fullName>Sell</fullName>
                </value>
                <value>
                    <fullName>Present</fullName>
                </value>
                <value>
                    <fullName>Presenter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SysAd_Comments__c</fullName>
        <label>SysAd Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <description>Used for data migration. GE 10/10/08.</description>
        <label>Temp</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserOrGroupId__c</fullName>
        <description>For Partner Community Sharing Report</description>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For Partner Community Sharing Report</inlineHelpText>
        <label>UserOrGroupId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_End_Date__c</fullName>
        <formula>Job__r.Job_Last_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Start_Date_YearMth__c</fullName>
        <formula>Job__r.Job_first_date_YearMth_as_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Start Date YearMth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Start_Date__c</fullName>
        <formula>Job__r.Job_First_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Start Date</label>
        <type>Date</type>
    </fields>
    <label>Job Role</label>
    <nameField>
        <displayFormat>JR-{00000}</displayFormat>
        <label>Job Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Roles</pluralLabel>
    <recordTypes>
        <fullName>NonPresenter</fullName>
        <active>true</active>
        <label>Non Presenter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Presenter</fullName>
        <active>true</active>
        <description>Includes Job Items as a related list.</description>
        <label>Presenter</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Unable_to_Change_Job_Role_for_Sell</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Job_Role__c )  &amp;&amp; Job_Role__c = &apos;Sell&apos;</errorConditionFormula>
        <errorMessage>Changing existing job role to Sell is not allowed. To do this, you will need to delete and re-entry as a Sell Job Role</errorMessage>
    </validationRules>
</CustomObject>